--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-LOACAL_MONGODB_URL=mongodb://localhost:27017/backend
+LOACAL_MONGODB_URL=mongodb://127.0.0.1:27017/backend
 NODE_ENV=develpoment
 JWT_SECRET=dharmesh
 JWT_EXPIRE=1d
-JWT_COOKIE_EXPIRE=30
+JWT_COOKIE_EXPIRE=30s
